--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcJVDTN/XII1+CuhqKWQwK",
+      "authorship_tag": "ABX9TyPDxCwOfqDiPsiCK0CHRXsl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +31,11 @@
       "execution_count": 1,
       "metadata": {
         "id": "Cpy8rN4wr941",
-        "outputId": "06a4cabc-1f2c-483b-c4c2-dee76333d277",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 366
-        }
+        },
+        "outputId": "06a4cabc-1f2c-483b-c4c2-dee76333d277"
       },
       "outputs": [
         {
@@ -74,11 +74,11 @@
         "pip install selenium"
       ],
       "metadata": {
-        "id": "apydiqKtJLBk",
-        "outputId": "21c62c13-4f55-4230-bf1b-cfea6fc3dcd7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "apydiqKtJLBk",
+        "outputId": "21c62c13-4f55-4230-bf1b-cfea6fc3dcd7"
       },
       "execution_count": 2,
       "outputs": [
@@ -118,6 +118,31 @@
     {
       "cell_type": "code",
       "source": [
+        "pip install glassdoor_scraper"
+      ],
+      "metadata": {
+        "id": "zNCejz96r4M3",
+        "outputId": "3f5338d8-cac2-4a46-f5c6-3f752b97f7b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement glassdoor_scraper (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for glassdoor_scraper\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from selenium.common.exceptions import NoSuchElementException, ElementClickInterceptedException\n",
         "from selenium import webdriver\n",
         "import time\n",
@@ -132,7 +157,49 @@
     {
       "cell_type": "code",
       "source": [
-        "def get_jobs(keyword, num_jobs, verbose):\n",
+        "import glassdoor_scraper as gs\n",
+        "import pandas as pd\n",
+        "path = \"C:/Users/ABHINAW/ds_salary_proj/chromedriver\"\n",
+        "df = gs.get_jobs('data scientist',15, false, path, 15)"
+      ],
+      "metadata": {
+        "id": "eCfGo4jum2wt",
+        "outputId": "76ee95bd-b956-49c9-9720-be0c321cb7f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 366
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-164ffe87b269>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mglassdoor_scraper\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"C:/Users/ABHINAW/ds_salary_proj/chromedriver\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_jobs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data scientist'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'glassdoor_scraper'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_jobs(keyword, num_jobs, verbose, path, slp_time):\n",
         "\n",
         "    '''Gathers jobs as a dataframe, scraped from Glassdoor'''\n",
         "\n",
@@ -143,7 +210,7 @@
         "    #options.add_argument('headless')\n",
         "\n",
         "    #Change the path to where chromedriver is in your home folder.\n",
-        "    driver = webdriver.Chrome(executable_path=\"/Users/omersakarya/Documents/GitHub/scraping-glassdoor-selenium/chromedriver\", options=options)\n",
+        "    driver = webdriver.Chrome(executable_path=path, options=options)\n",
         "    driver.set_window_size(1120, 1000)\n",
         "\n",
         "    url = 'https://www.glassdoor.com/Job/jobs.htm?sc.keyword=\"' + keyword + '\"&locT=C&locId=1147401&locKeyword=San%20Francisco,%20CA&jobType=all&fromAge=-1&minSalary=0&includeNoSalaryJobs=true&radius=100&cityId=-1&minRating=0.0&industryId=-1&sgocId=-1&seniorityType=all&companyId=-1&employerSizes=0&applicationType=0&remoteWorkType=0'\n",
@@ -154,7 +221,7 @@
         "\n",
         "        #Let the page load. Change this number based on your internet speed.\n",
         "        #Or, wait until the webpage is loaded, instead of hardcoding it.\n",
-        "        time.sleep(4)\n",
+        "        time.sleep(slp_time)\n",
         "\n",
         "        #Test for the \"Sign Up\" prompt and get rid of it.\n",
         "        try:\n",
@@ -282,7 +349,8 @@
         "                print(\"Revenue: {}\".format(revenue))\n",
         "                print(\"Competitors: {}\".format(competitors))\n",
         "                print(\"@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\")\n",
-        "                    jobs.append({\"Job Title\" : job_title,\n",
+        "\n",
+        "            jobs.append({\"Job Title\" : job_title,\n",
         "            \"Salary Estimate\" : salary_estimate,\n",
         "            \"Job Description\" : job_description,\n",
         "            \"Rating\" : rating,\n",
@@ -303,18 +371,87 @@
         "            driver.find_element_by_xpath('.//li[@class=\"next\"]//a').click()\n",
         "        except NoSuchElementException:\n",
         "            print(\"Scraping terminated before reaching target number of jobs. Needed {}, got {}.\".format(num_jobs, len(jobs)))\n",
-        "            break\n",
-        "\n",
-        "    return pd.DataFrame(jobs)  #This line converts the dictionary object into a pandas DataFrame.\n",
-        "#This line will open a new chrome window and start the scraping.\n",
-        "df = get_jobs(\"data scientist\", 5, False)\n",
-        "df"
+        "            break\n"
       ],
       "metadata": {
         "id": "sZvnhfPlKcsK"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install glassdoor"
+      ],
+      "metadata": {
+        "id": "hLSTgPo81TM5",
+        "outputId": "5076fd65-d982-4768-a5d1-d8efaf7b4a4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting glassdoor\n",
+            "  Using cached glassdoor-0.0.8.tar.gz (5.7 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: requests>=1.1.0 in /usr/local/lib/python3.10/dist-packages (from glassdoor) (2.31.0)\n",
+            "Collecting BeautifulSoup>=3.2.1 (from glassdoor)\n",
+            "  Using cached BeautifulSoup-3.2.2.tar.gz (32 kB)\n",
+            "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+            "  \n",
+            "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
+            "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+            "  \u001b[31m╰─>\u001b[0m See above for output.\n",
+            "  \n",
+            "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25herror\n",
+            "\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
+            "\n",
+            "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
+            "\u001b[31m╰─>\u001b[0m See above for output.\n",
+            "\n",
+            "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
+            "\u001b[1;36mhint\u001b[0m: See above for details.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import pandas as pd\n",
+        "path = \"C:/Users/ABHINAW/ds_salary_proj/chromedriver\"\n",
+        "df = get_jobs('data scientist', slp_time, 15, path, 15)"
+      ],
+      "metadata": {
+        "id": "mBg9ZOJ2yyMP",
+        "outputId": "ce5e62eb-e859-4256-93dc-780d8c1c917c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 210
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-24-03403cce9785>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"C:/Users/ABHINAW/ds_salary_proj/chromedriver\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_jobs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data scientist'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mslp_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'slp_time' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
